--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,20 +22,20 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
 
-# Instala Python 3.12 (última versão estável)
-RUN add-apt-repository ppa:deadsnakes/ppa -y \
-    && apt-get update \
+# Instala Python e pipx (gerenciador de ferramentas Python isoladas)
+RUN apt-get update \
     && apt-get -y install --no-install-recommends \
-    python3.12 \
-    python3.12-venv \
-    python3.12-dev \
+    python3 \
+    python3-full \
+    python3-venv \
+    python3-dev \
     python3-pip \
+    pipx \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
 
-# Configura Python 3.12 como padrão
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1 \
-    && update-alternatives --install /usr/bin/python python /usr/bin/python3.12 1
+# Configura Python como padrão
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
 
 # Instala Node.js 20.x LTS (última versão LTS)
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
@@ -55,31 +55,34 @@ RUN npm install -g \
     typescript \
     bash-language-server
 
+
+# Cria um virtualenv no sistema para ferramentas de desenvolvimento Python
+# Instalamos como root dentro de /opt/venv para evitar PEP 668 (externally-managed-environment)
+RUN python3 -m venv /opt/venv \
+    && /opt/venv/bin/python -m pip install --upgrade pip setuptools wheel \
+    && /opt/venv/bin/pip install \
+        pre-commit \
+        detect-secrets \
+        pylint \
+        flake8 \
+        black \
+        autopep8 \
+        mypy \
+        bandit \
+        safety \
+        pytest \
+        pytest-cov \
+        ipython \
+        ansible \
+        ansible-lint \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
+
+# Exponha os binários do virtualenv no PATH para todos os usuários
+ENV PATH="/opt/venv/bin:/home/vscode/.local/bin:${PATH}"
+
 # Configura usuário não-root
 USER vscode
-
-# Atualiza pip para a última versão
-RUN python3 -m pip install --user --upgrade pip setuptools wheel
-
-# Instala ferramentas Python de desenvolvimento
-RUN python3 -m pip install --user --upgrade \
-    pre-commit \
-    detect-secrets \
-    pylint \
-    flake8 \
-    black \
-    autopep8 \
-    mypy \
-    bandit \
-    safety \
-    pytest \
-    pytest-cov \
-    ipython \
-    ansible \
-    ansible-lint
-
-# Adiciona binários Python ao PATH
-ENV PATH="/home/vscode/.local/bin:${PATH}"
 
 # Configura ambiente bash
 RUN echo 'export EDITOR=vim' >> /home/vscode/.bashrc \
