--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,54 +7,39 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        // Bash Development
         "timonwong.shellcheck",
         "rogalmic.bash-debug",
         "foxundermoon.shell-format",
         "mads-hartmann.bash-ide-vscode",
-        
-        // Python Development
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-python.pylint",
         "ms-python.flake8",
         "ms-python.black-formatter",
         "ms-python.debugpy",
-        
-        // Markdown & Documentation
         "davidanson.vscode-markdownlint",
         "yzhang.markdown-all-in-one",
         "bierner.markdown-preview-github-styles",
-        
-        // Git & GitHub
         "github.vscode-pull-request-github",
         "github.vscode-github-actions",
         "eamodio.gitlens",
         "donjayamanne.githistory",
-        
-        // AI Assistants
         "github.copilot",
         "github.copilot-chat",
-        
-        // Code Quality & Formatting
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "redhat.vscode-yaml",
         "redhat.vscode-xml",
-        
-        // Utilities
         "usernamehw.errorlens",
         "aaron-bond.better-comments",
         "streetsidesoftware.code-spell-checker",
         "wayou.vscode-todo-highlight",
         "gruntfuggly.todo-tree",
-        
-        // Security
         "snyk-security.snyk-vulnerability-scanner",
-        
-        // Container & DevOps
         "ms-azuretools.vscode-docker",
-        "ms-vscode-remote.remote-containers"
+        "ms-vscode-remote.remote-containers",
+        "jetmartin.bats",
+        "kherring.bats-test-runner"
       ],
       "settings": {
         // Shellcheck
@@ -62,15 +47,15 @@
         "shellcheck.run": "onType",
         "shellcheck.executablePath": "/usr/bin/shellcheck",
         "shellcheck.customArgs": [],
-        
+
         // Shell Format
         "shellformat.path": "/usr/bin/shfmt",
         "shellformat.flag": "-i 2 -ci -bn",
-        
+
         // Bash IDE
         "bashIde.explainshellEndpoint": "https://explainshell.com",
         "bashIde.shellcheckPath": "/usr/bin/shellcheck",
-        
+
         // Python
         "python.defaultInterpreterPath": "/usr/bin/python3",
         "python.linting.enabled": true,
@@ -78,13 +63,13 @@
         "python.linting.flake8Enabled": true,
         "python.formatting.provider": "black",
         "python.analysis.typeCheckingMode": "basic",
-        
+
         // Markdown
         "markdownlint.config": {
           "extends": ".markdownlint.json"
         },
         "markdown.preview.breaks": true,
-        
+
         // Editor
         "files.eol": "\n",
         "files.insertFinalNewline": true,
@@ -96,16 +81,16 @@
         "editor.rulers": [80, 120],
         "editor.tabSize": 2,
         "editor.insertSpaces": true,
-        
+
         // Git
         "git.autofetch": true,
         "git.confirmSync": false,
         "git.enableSmartCommit": true,
-        
+
         // Terminal
         "terminal.integrated.defaultProfile.linux": "bash",
         "terminal.integrated.scrollback": 10000,
-        
+
         // File Associations
         "[shellscript]": {
           "editor.defaultFormatter": "foxundermoon.shell-format",
