--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,10 +1,11 @@
+---
 name: Code Validation
 
-on:
+"on":
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   validate:
@@ -20,17 +21,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install shellcheck
         run: |
           sudo apt-get update
           sudo apt-get install -y shellcheck
+
+      - name: Install BATS (Bash Automated Testing System)
+        run: |
+          sudo apt-get install -y bats
 
       - name: Install markdownlint
         run: npm install -g markdownlint-cli
@@ -56,6 +61,11 @@ jobs:
         run: |
           echo "🔍 Validando scripts Shell..."
           find . -name "*.sh" -type f -not -path "./.git/*" -exec shellcheck --severity=warning {} +
+
+      - name: Run BATS tests
+        run: |
+          echo "🧪 Executando testes BATS..."
+          bats tests/*.bats
 
       - name: Run markdownlint
         run: |
