docs: atualiza AGENTS.md com lições aprendidas dos testes BATS
Adiciona seções críticas baseadas em problemas identificados e corrigidos:

- Template de cabeçalho obrigatório (Script:/Description:)
- Seção 'Estrutura Obrigatória de Scripts' com função main()
- Seção 'Validação de Dependências' com command -v
- Checklist detalhado validado por BATS (estrutura, funções, logging)
- Template completo de script pronto para uso
- Seção 'Erros Comuns a Evitar' com exemplos do que NÃO fazer
- Reforço sobre logging obrigatório em todas as funções
- Proteção contra sourcing explicada

Problemas corrigidos que motivaram esta atualização:
- aruba-auth.sh: faltava padrão Script:/Description:
- create-vrf.sh: faltava main() e logging entrada/saída
- install-aruba-cli.sh: faltava validação de dependências

Esta atualização previne que agentes AI (e humanos) cometam
os mesmos erros no futuro.

Refs: #BATS-validation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,13 @@
     "dockerfile": "Dockerfile",
     "context": ".."
   },
+  "containerEnv": {
+    "OPENAI_API_BASE": "https://api.githubcopilot.com",
+    "OPENAI_API_KEY": "${localEnv:GITHUB_TOKEN}",
+    "AIDER_MODEL": "gpt-4",
+    "AIDER_AUTO_COMMITS": "false",
+    "AIDER_DARK_MODE": "true"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
@@ -130,6 +137,11 @@
     },
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.11",
+      "installTools": true,
+      "optimize": true
     }
   }
 }
