--- a/.gitignore
+++ b/.gitignore
@@ -258,6 +258,19 @@ pids/
 dump.rdb
 
 # ==============================================================================
+# AI CODING ASSISTANTS
+# ==============================================================================
+# Aider AI
+.aider*
+.aiderignore
+.aider.chat.history*
+.aider.input.history
+.aider.tags.cache.v3/
+
+# GitHub Copilot
+.copilot/
+
+# ==============================================================================
 # OUTROS
 # ==============================================================================
 # Arquivos compactados
