feat: Implement AGENTS.md File Watcher with automatic instruction generation
- Added watch-agents.sh for monitoring changes in AGENTS.md and regenerating Copilot instructions.

- Created generate-copilot-instructions.sh to translate AGENTS.md content and generate JSON instructions.

- Introduced copilot-codegen-instructions.json to store generated instructions.

- Developed WATCHER_IMPLEMENTATION.md for documentation on the watcher implementation.

- Updated .devcontainer/post-create.sh to install inotify-tools and start the watcher automatically.

- Enhanced README.md with usage instructions for the AGENTS.md File Watcher.

- Implemented robust logging and process management features in the watcher script.

- Added validation checks and a comprehensive testing checklist for the implementation.

(See attachments for file contents.)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,9 @@
         "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-containers",
         "jetmartin.bats",
-        "kherring.bats-test-runner"
+        "kherring.bats-test-runner",
+        "lakshmikanthayyadevara.githooks",
+        "ArshdeepSingh.toggle-terminal-through-status-bar"
       ],
       "settings": {
         // Shellcheck
@@ -97,6 +99,19 @@
         // Terminal
         "terminal.integrated.defaultProfile.linux": "bash",
         "terminal.integrated.scrollback": 10000,
+
+        // GitHub Copilot - Custom Instructions
+        "github.copilot.advanced": {
+          "debug.overrideEngine": "gpt-4",
+          "debug.useNodeFetcher": true
+        },
+        "github.copilot.enable": {
+          "*": true,
+          "yaml": true,
+          "plaintext": true,
+          "markdown": true,
+          "shellscript": true
+        },
 
         // File Associations
         "[shellscript]": {
