docs: atualiza documentação das tecnologias devcontainer e adiciona agradecimentos open source
- README.md: Expande seções de extensões VS Code (36) e CLI tools por categoria
- README.md: Adiciona seção completa de agradecimentos à comunidade open source
- README.md: Inclui análise quantitativa de dependência (~95% open source)
- THIRDPARTY.md: Adiciona extensões VS Code faltantes (BATS, Git Hooks, etc.)
- THIRDPARTY.md: Corrige versão Python (3.11) e adiciona pipx, bats CLI
- THIRDPARTY.md: Atualiza contagem total (100 tecnologias) e resumo por categoria

Baseado em análise completa do devcontainer.json atual com todas as 36 extensões,
4 DevContainer features, e ferramentas CLI organizadas por categoria de uso.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,7 +48,9 @@
         "jetmartin.bats",
         "kherring.bats-test-runner",
         "lakshmikanthayyadevara.githooks",
-        "ArshdeepSingh.toggle-terminal-through-status-bar"
+        "ArshdeepSingh.toggle-terminal-through-status-bar",
+        "ms-vscode.vscode-markdown-notebook",
+        "zombiezen.ivy"
       ],
       "settings": {
         // Shellcheck
