feat: Add scripts for Aider setup and GitHub Copilot integration
- Created `aider-start.sh` to initialize Aider with optimized settings for GitHub Copilot.
- Added `copilot-sync-devcontainer.sh` to automate updates for Markdown files related to `devcontainer.json`.
- Introduced `fix-aider-auth.sh` to resolve authentication issues with Aider and GitHub Copilot.
- Implemented `setup-github-token.sh` for extracting and configuring GitHub tokens.
- Developed `update-devcontainer-sync.sh` to guide users in synchronizing files after modifying `devcontainer.json`.
- Enhanced `validate-aider.sh` to include token format validation and improved API connectivity checks.
- Added unit tests for `setup-github-token.sh` using BATS framework.
- Created a simple test script `test-script.sh` for demonstration purposes.
- Updated `commons.sh` with additional logging functions for better traceability.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
   },
   "containerEnv": {
     "OPENAI_API_BASE": "https://api.githubcopilot.com",
-    "OPENAI_API_KEY": "${localEnv:GITHUB_TOKEN}",
+    "OPENAI_API_KEY": "${localEnv:GITHUB_TOKEN:-}",
     "AIDER_MODEL": "gpt-4",
     "AIDER_AUTO_COMMITS": "false",
     "AIDER_DARK_MODE": "true"
@@ -138,11 +138,10 @@
     }
   },
   "mounts": [
-    "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.config/gh,target=/home/vscode/.config/gh,type=bind,consistency=cached",
-    "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+    // Os mounts condicionais são configurados no post-create.sh
+    // para evitar erros quando os diretórios não existem
   ],
-  "postCreateCommand": "bash .devcontainer/post-create.sh",
+  "postCreateCommand": "bash .devcontainer/post-create.sh && pip3 install --user aider-chat",
   "remoteUser": "vscode",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {
