--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,7 +50,8 @@
         "lakshmikanthayyadevara.githooks",
         "ArshdeepSingh.toggle-terminal-through-status-bar",
         "ms-vscode.vscode-markdown-notebook",
-        "zombiezen.ivy"
+        "zombiezen.ivy",
+        "piotrpalarz.vscode-gitignore-generator"
       ],
       "settings": {
         // Shellcheck
