chore: remove obsolete .env-sample, standardize on .env.example
- Remove .env-sample (obsolete, focused on generic Aruba auth)
- Standardize on .env.example (aligned with create-aruba-vrf.sh)
- Update references in aruba-auth.sh documentation
- Update docs/SETUP.md structure and references
- Update .gitignore to remove .env-sample exception
- Update .pre-commit-config.yaml to use tests/run-tests.sh

Rationale:
.env.example is more complete, better documented, and aligned
with the main script (create-aruba-vrf.sh) which uses Fabric
Composer specific variables. Keeping both files creates confusion.

Refs: Fabric Composer standardization, project cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@
 .env
 .env.*
 !.env.example
-!.env.sample
 !.env.template
 
 # ==============================================================================
@@ -260,12 +259,19 @@ dump.rdb
 # ==============================================================================
 # AI CODING ASSISTANTS
 # ==============================================================================
-# Aider AI
-.aider*
-.aiderignore
+# Aider AI - arquivos temporários e cache
 .aider.chat.history*
 .aider.input.history
 .aider.tags.cache.v3/
+.aider.tags.cache.v4/
+ai-support/config/.aider.chat.history*
+ai-support/config/.aider.input.history
+ai-support/config/.aider.tags.cache.v3/
+ai-support/config/.aider.tags.cache.v4/
+
+# Aider AI - arquivos de configuração (manter apenas o principal)
+!ai-support/config/.aider.conf.yml
+!.aider.conf.yml
 
 # GitHub Copilot
 .copilot/
