feat: Enhance VRF creation script with additional parameters and validation
- Added support for VNI and switch UUIDs in the VRF creation script.
- Updated the AFC API payload structure to include route_target and VNI.
- Improved error handling and logging for API interactions.
- Introduced a new test script to validate the payload structure against AFC API specifications.
- Updated documentation to reflect new parameters and usage examples.
- Added new third-party dependency for .gitignore generation in devcontainer.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,7 +48,8 @@
         "lakshmikanthayyadevara.githooks",
         "ArshdeepSingh.toggle-terminal-through-status-bar",
         "ms-vscode.vscode-markdown-notebook",
-        "zombiezen.ivy"
+        "zombiezen.ivy",
+        "piotrpalarz.vscode-gitignore-generator"
       ],
       "settings": {
         // Shellcheck
